fix margins on body/containers adding horizontal scrollbar

--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,12 @@ body {
     --invert-filter: unset;
 }
 
+body {
+    width: 99%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 html.dark, body.dark {
     --text: var(--dark-text);
     color: var(--text);
